trying to add video support to ProductDetailScreen

--- a/app.json
+++ b/app.json
@@ -7,9 +7,6 @@
     "icon": "./assets/images/icon.png",
     "scheme": "yahdsell2",
     "userInterfaceStyle": "automatic",
-    
-    
-
     "ios": {
       "supportsTablet": true
     },
@@ -43,7 +40,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "sentry-expo"
+      "sentry-expo",
+      "expo-video"
     ],
     "experiments": {
       "typedRoutes": true
