--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "sentry-expo": "~7.0.0"
+    "sentry-expo": "~7.0.0",
+    "expo-av": "~15.1.6",
+    "expo-video": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
