--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "53.0.11",
+    "expo-av": "~15.1.6",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
@@ -37,6 +38,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
+    "expo-video": "~2.2.1",
     "expo-web-browser": "~14.1.6",
     "firebase": "^9.23.0",
     "react": "19.0.0",
@@ -47,14 +49,12 @@
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "sentry-expo": "~7.0.0",
-    "expo-av": "~15.1.6",
-    "expo-video": "~2.2.1"
+    "sentry-expo": "~7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
