--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint",
-    "postinstall": "patch-package"
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
@@ -61,7 +60,8 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "sentry-expo": "~7.0.0"
+    "sentry-expo": "~7.0.0",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -69,7 +69,6 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "typescript": "~5.8.3"
   },
