--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "sentry-expo": "~7.0.0",
-    "expo-updates": "~0.28.17"
+    "expo-updates": "~0.28.17",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
